Some minor UX tweaks

--- a/src/app/outcome/outcome-overview/outcome-overview.component.html
+++ b/src/app/outcome/outcome-overview/outcome-overview.component.html
@@ -10,9 +10,9 @@
     <p-tabPanel header="Contunity outcomes">
         <app-continuity-outcomes-overview></app-continuity-outcomes-overview>
     </p-tabPanel>
-    <p-tabPanel header="Shopping list outcomes">
+    <!-- <p-tabPanel header="Shopping list outcomes">
         <app-shopping-list-outcomes-overview></app-shopping-list-outcomes-overview>
-    </p-tabPanel>
+    </p-tabPanel> -->
 </p-tabView>
 
 <p-dialog [(visible)]="showNewOutcomeDialog">
