--- a/src/app/outcome/outcome-overview/outcome-overview.component.html
+++ b/src/app/outcome/outcome-overview/outcome-overview.component.html
@@ -7,7 +7,7 @@
     <p-tabPanel header="Outcomes">
         <app-single-outcomes-overview></app-single-outcomes-overview>
     </p-tabPanel>
-    <p-tabPanel header="Contunity outcomes">
+    <p-tabPanel header="Continuity outcomes">
         <app-continuity-outcomes-overview></app-continuity-outcomes-overview>
     </p-tabPanel>
     <!-- <p-tabPanel header="Shopping list outcomes">
