Very minor styling fixed for outcomes summary

--- a/src/app/outcome/single-outcomes-overview/single-outcomes-overview.component.html
+++ b/src/app/outcome/single-outcomes-overview/single-outcomes-overview.component.html
@@ -45,12 +45,12 @@
 
 <!-- SUMMARY -->
 <div class="my-4">
-    <p-panel header="Outcomes summary" [toggleable]="true" [collapsed]="true">
-        <p class="font-bold text-lg my-4">
+    <p-panel class="p-4" header="Outcomes summary" [toggleable]="true" [collapsed]="true">
+        <p class="font-bold text-xl mt-2 mb-4">
             Summary for {{ outcomesSummary.startDate }} - {{ outcomesSummary.endDate }}
         </p>
 
-        <p class="font-bold text-lg mb-4">
+        <p class="font-bold text-lg my-2">
             By categories
         </p>
 
@@ -74,7 +74,7 @@
                 </p>
             </div>
         </div>
-        <p class="font-bold text-lg my-4">
+        <p class="font-bold text-lg my-2">
             Overall
         </p>
         <div class="grid">
